--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
-    "express": "^4.12.4",
+    "feathers": "^1.1.1",
+    "feathers-mongoose": "^2.0.0",
     "method-override": "^2.3.3",
     "mongoose": "^4.0.5"
   }
